# simple-devenv

./: config.sh  create.sh  pyproject.toml  tui.py  update_workspaces.sh
pre_commit_config/: .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  .ruff.toml  eslint.config.cjs  prettier.config.cjs
templates/: .pylintrc.17.0.template  .pylintrc.18.0.template  .pylintrc.template  code_workspace.json.template  launch.json.template  odoo.conf.template  odools.toml.template  update_addons_path.sh.template  update_odools_config.sh.template
templates/odoo_module/: README.md
