[project]
name = "simple-devenv"
version = "1.0.0"
description = "Odoo development environment setup with TUI"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
]

[project.scripts]
simple-devenv = "tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["tui.py"]

[tool.hatch.build.targets.sdist]
only-include = ["tui.py", "create.sh", "config.sh", "templates/", "pre_commit_config/"]
